<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PictureStore</string>
    <string name="action_settings">Settings</string>
    <string name="menu_hot">What\'s hot</string>
    <string name="menu_idol">Idol</string>
    <string name="menu_galary">Galary</string>
    <string name="menu_more">More</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_about">About</string>
    <string name="display_x">X</string>
    <string name="display_save">Save</string>
    <string name="display_add">Add</string>
    <string name="display_loading">Loading&#8230;</string>
    <string name="display_setting">Setting</string>
    <string name="display_close">Close</string>
	<string name="display_content_description">ps</string>
	<string name="display_previous">Previous</string>
	<string name="display_next">Next</string>
	<string name="display_publish">Publish</string>

    <!-- Content Setting -->
    <string name="content_setting_security">Security</string>
    <string name="content_setting_social">Social</string>
    <string name="content_setting_social_facebook">Facebook</string>
    <string name="content_setting_social_twitter">Twitter</string>
    <string name="content_setting_country">Country</string>
    <string name="content_setting_sexual_level">Sexual level</string>

    <!-- Profile Login -->
    <string name="dialog_login_title">Login</string>
    <string name="dialog_login_intruction">Login to Facebook or Twitter</string>
    <string name="dialog_login_facebook">Login Facebook</string>
    <string name="dialog_login_twitter">Login Twitter</string>
    <string name="dialog_login_facebook_logout">Logout Facebook</string>
    <string name="dialog_login_twitter_logout">Logout Twitter</string>

    <!-- Content Hot -->
    <string name="content_hot_vietnam">Viet Nam</string>
    <string name="content_hot_usa">USA</string>
    <string name="content_hot_korea">Korea</string>
    <string name="content_hot_detail">Detail</string>
    <string name="content_hot_detail_share">share</string>    
    <string name="content_hot_detail_download">download</string>
    <string name="content_hot_detail_favorite">favorite</string>
    <string name="content_hot_share_dialog">Share</string>
    <string name="content_hot_share_dialog_hint">Type your comment here&#8230;</string>
    <string name="content_hot_share_dialog_textcount_over_all">You\'ve reached Twitter\'s character limit. To add more characters, you will need to turn Twitter off</string>
	<string name="content_hot_share_dialog_textcount_over_twitter">You\'ve reached Twitter\'s character limit</string>
	<string name="content_hot_share_twitter_success">Share Twitter success</string>
	<string name="content_hot_share_facebook_success">Share Facebook success</string>
	<string name="content_hot_share_twitter_unsuccess">Share Twitter unsuccess</string>
	<string name="content_hot_share_facebook_unsuccess">Share Facebook unsuccess</string>
	
	<!-- Content About -->
	<string name="content_about">About</string>
	<string name="content_about_version">Version: v1.0</string>
	<string name="content_about_author">Author: GHC_</string>
	<string name="content_about_email">Email: chung.pv0795@gmail.com</string>
</resources>