<?xml version="1.0" encoding="utf-8"?>
<com.picturestore.view.EnhancedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/ps_dimen_height_2"
        android:layout_marginRight="@dimen/ps_dimen_height_2"
        android:layout_marginTop="@dimen/ps_dimen_height_2"
        android:orientation="vertical" >

        <TextView
            style="@style/font_bold_black12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/ps_dimen_height_2"
            android:layout_marginTop="@dimen/ps_dimen_height_2"
            android:text="@string/content_setting_security" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/ps_dimen_width_5"
            android:layout_marginRight="@dimen/ps_dimen_width_5"
            android:background="@drawable/layout_border_corner"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/ps_dimen_height_2"
            android:layout_marginTop="@dimen/ps_dimen_height_2" >

            <TextView
                style="@style/font_bold_black12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content_setting_social" />

            <TextView
                android:id="@+id/ps_tvSetting_Social_Setting"
                style="@style/font_normal_black12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/display_setting" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/ps_dimen_width_5"
            android:layout_marginRight="@dimen/ps_dimen_width_5"
            android:background="@drawable/layout_border_corner"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/ps_dimen_height_2" >

                <TextView
                    style="@style/font_normal_black12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/content_setting_social_facebook" />

                <Switch
                    android:id="@+id/ps_swSetting_Social_Facebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:thumbTextPadding="5dp"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/ps_tvSetting_Social_AddFacebook"
                    style="@style/font_normal_black14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:padding="5dp"
                    android:text="@string/display_add"
                    android:visibility="invisible" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#CCCCCC" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/ps_dimen_height_2" >

                <TextView
                    style="@style/font_normal_black12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/content_setting_social_twitter" />

                <Switch
                    android:id="@+id/ps_swSetting_Social_Twitter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:thumbTextPadding="5dp"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/ps_tvSetting_Social_AddTwitter"
                    style="@style/font_normal_black14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:padding="5dp"
                    android:text="@string/display_add"
                    android:visibility="invisible" />
            </RelativeLayout>
        </LinearLayout>

        <TextView
            style="@style/font_bold_black12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/ps_dimen_height_2"
            android:layout_marginTop="@dimen/ps_dimen_height_2"
            android:text="@string/content_setting_country" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/ps_dimen_width_5"
            android:layout_marginRight="@dimen/ps_dimen_width_5"
            android:background="@drawable/layout_border_corner"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            style="@style/font_bold_black12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/ps_dimen_height_2"
            android:layout_marginTop="@dimen/ps_dimen_height_2"
            android:text="@string/content_setting_sexual_level" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/ps_dimen_width_5"
            android:layout_marginRight="@dimen/ps_dimen_width_5"
            android:background="@drawable/layout_border_corner"
            android:orientation="vertical"
            android:padding="@dimen/ps_dimen_height_2" >

            <SeekBar
                android:id="@+id/ps_sbSetting_SexualLevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <!-- Using temparory view here to fix ScrollView bug when scroll down -->
        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />
    </LinearLayout>

</com.picturestore.view.EnhancedScrollView>